tests/fixtures/invalid/pow_bool_set_str.py
# Cannot call pow() with Bool, Set[int], Str
x = pow(True, {1, 2, 3}, "hello")
